logs/mirror/build.make.000.log.stderr
In file included from /home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/bodyState.cpp:1:0:
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:63:35: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  Point lastStats[15]={Point(0,0,0)};
                                   ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:64:33: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  Point rotated[15]={Point(0,0,0)}; //A better name would be transformed
                                 ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:65:34: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  Point rotated2[15]={Point(0,0,0)};
                                  ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:69:27: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  double highestHipAverage=.5;
                           ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:63:35: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11 [enabled by default]
  Point lastStats[15]={Point(0,0,0)};
                                   ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:64:33: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11 [enabled by default]
  Point rotated[15]={Point(0,0,0)}; //A better name would be transformed
                                 ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/bodyState.hpp:65:34: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11 [enabled by default]
  Point rotated2[15]={Point(0,0,0)};
                                  ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/mirror.cpp:22:39: fatal error: skeleton_tracker/user_IDs.h: No such file or directory
 #include "skeleton_tracker/user_IDs.h"
                                       ^
compilation terminated.
In file included from /home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/mirrorGUI.cpp:1:0:
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/mirrorGUI.hpp:21:49: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  sf::Color backgroundColor=sf::Color(255,0,0,255);
                                                 ^
In file included from /home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/mirrorGUI.cpp:1:0:
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/mirrorGUI.hpp:60:31: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  double robotPositions[33]={-1};
                               ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/mirrorGUI.hpp:61:31: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  double humanPositions[33]={-1};
                               ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/mirrorGUI.hpp:65:19: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  bool isOcculusOn=false,isHeadOn=false,isLeftArmOn=false,isRightArmOn=false,isChestOn=false,isPelvisOn=false;
                   ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/mirrorGUI.hpp:65:34: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  bool isOcculusOn=false,isHeadOn=false,isLeftArmOn=false,isRightArmOn=false,isChestOn=false,isPelvisOn=false;
                                  ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/mirrorGUI.hpp:65:52: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  bool isOcculusOn=false,isHeadOn=false,isLeftArmOn=false,isRightArmOn=false,isChestOn=false,isPelvisOn=false;
                                                    ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/mirrorGUI.hpp:65:71: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  bool isOcculusOn=false,isHeadOn=false,isLeftArmOn=false,isRightArmOn=false,isChestOn=false,isPelvisOn=false;
                                                                       ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/mirrorGUI.hpp:65:87: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  bool isOcculusOn=false,isHeadOn=false,isLeftArmOn=false,isRightArmOn=false,isChestOn=false,isPelvisOn=false;
                                                                                       ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/mirrorGUI.hpp:65:104: warning: non-static data member initializers only available with -std=c++11 or -std=gnu++11 [enabled by default]
  bool isOcculusOn=false,isHeadOn=false,isLeftArmOn=false,isRightArmOn=false,isChestOn=false,isPelvisOn=false;
                                                                                                        ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/mirrorGUI.hpp:60:31: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11 [enabled by default]
  double robotPositions[33]={-1};
                               ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/../include/mirrorGUI.hpp:61:31: warning: extended initializer lists only available with -std=c++11 or -std=gnu++11 [enabled by default]
  double humanPositions[33]={-1};
                               ^
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/mirrorGUI.cpp: In member function ‘void GUI::doButtonStuff(int)’:
/home/hoenir/numl_catkin_ws/src/numl_val_mirror/src/mirrorGUI.cpp:101:3: error: ‘areWeRecording’ was not declared in this scope
   areWeRecording=!areWeRecording;
   ^
make[2]: *** [CMakeFiles/mirror.dir/src/mirrorGUI.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[2]: *** [CMakeFiles/mirror.dir/src/mirror.cpp.o] Error 1
make[1]: *** [CMakeFiles/mirror.dir/all] Error 2
make: *** [all] Error 2
